tests/NormalTests/paczka1/fuzzy1/32536630.err
Error in line 11: XtlmP8SFkag A116 38,29
Error in line 5: pBmD S495 39,4
Error in line 8: XtlmP8SFkag S495 58,4
Error in line 21: 85cLk A116 74,2
Error in line 32: XtlmP8SFkag A116 3,2
